src/styling.css
/* ... */
/* Primary Image */
.image img {
  max-height: 400px;
  width: auto;
  border-radius: 5px;
  cursor: pointer;
  transition: filter 0.3s;
}

.image img:hover {
  filter: brightness(var(--image-brightness));
}

/* Image modal css */
.modal-bg {
  position: fixed;
  display: none;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.8);
  z-index: 1000;
  cursor: pointer;
}
.img-popup-container {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: min(calc(100% - 20px), calc(var(--max-width) + 200px));
  display: none;
  z-index: 1001;
  overflow: hidden;
}
.img-popup-img {
  width: auto;
  height: auto;
  margin: 0 auto;
}

/* Hide NFSW Images -- make sure you use the tag `NSFW` EXACTLY */
.NSFW img {
  filter: blur(30px);
  transition: filter 0.2s;
}

.NSFW img:hover {
  filter: blur(0px);
  transition: filter 0.2s;
}

/* Back sentence */
.sentence {
  font-size: var(--back-sentence-font-size);
  display: inline-block;
  width: calc(100% - 20px);
  max-width: var(--max-width);
}
.sentence-mobile {
  display: none;
}
.mobile .sentence {
  display: none;
}
.mobile .sentence-mobile {
  font-size: var(--back-sentence-font-size);
  display: inline-block;
  width: calc(100% - 20px);
  max-width: var(--max-width);
}

/* Footer */
footer {
  margin-top: auto;
  width: 100%;
}
.bot-container {
  display: flex;
  justify-content: flex-end;
  max-width: calc(var(--max-width) + 20px);
  margin: 0px auto;
  width: calc(100% - 20px);
}
.tags-container {
  flex-grow: 1;
}
.tags {
  font-family: var(--font-sans);
  background-color: var(--bg-elevated);
  color: var(--fg-color);
  display: inline-block;
  padding: 1px 5px;
  cursor: pointer;
  border-radius: 5px;
  font-size: 0.9rem;
  margin: auto 3px;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 60dvw;
  white-space: nowrap;
}
.mobile .tags {
  padding: 1px 3px;
  font-size: 9px;
}

/* Popup CSS */
.popup {
  font-family: var(--font-sans);
  background-color: var(--bg-elevated);
  display: block;
  border-radius: 8px;
  padding: 10px;
  max-width: min(var(--max-width), calc(100% - 20px));
}

/* Definition Header */
.def-header {
  display: flex;
  font-size: 30px;
  justify-content: center;
  align-items: center;
  max-width: 820px;
  margin: auto;
  position: relative;
}

.dh-left {
  /* left */
  background: var(--bg-elevated);
  padding: 0.52em;
  border-radius: 5px;
  flex: 1; /* takes up all available space */
}

.dh-right {
  padding-left: 20px;
  max-width: 400px;
  position: relative;
  font-size: 0; /* weird hack needed to make the image stay in line with the .def-header */
}

.mobile .dh-left {
  background: none;
  padding: 0em;
  border-radius: 0px;
  max-width: 60vw;
}
.mobile .dh-right {
  max-width: 40vw;
}

/* Misc. info */
.misc-info {
  margin: 0 auto;
}
.misc-info ul {
  margin: 0;
}

/* Full definition */
.full-def {
  font-family: var(--font-sans);
  text-align: left;
  display: inline-flex;
}
.full-def ol {
  margin: 0;
}

/* ----- Misc ----- */

/* Furigana */
.show-furigana > ruby rt {
  opacity: 1;
}
ruby rt {
  user-select: none;
  opacity: 0;
}
ruby:hover rt {
  opacity: 1;
}

/* Bold */
b {
  color: var(--bold);
  font-weight: 600;
}
b > ruby rt {
  opacity: 1;
}
.mobile b {
  font-weight: 400;
}

/* Dropdown */
details {
  font-family: var(--font-sans);
  margin: 5px 0px;
}
summary {
  user-select: none;
  cursor: pointer;
  width: fit-content;
  margin: 0px auto;
}

/* Pitch graphs css */
.pitch-low {
  position: relative;
}
.pitch-high {
  position: relative;
}
.pitch-high > .pitch-line {
  display: block;
  position: absolute;
  top: -0.001em;
  left: 0;
  right: 0;
  height: 0;
  border-top-width: 0.1em;
  border-top-style: solid;
}
.pitch-to-drop {
  position: relative;
  padding-right: 0.1em;
  margin-right: 0.1em;
}
.pitch-to-drop > .pitch-line {
  display: block;
  position: absolute;
  top: -0.001em;
  left: 0;
  right: 0;
  border-top-width: 0.1em;
  border-top-style: solid;
  right: -0.1em;
  height: 0.4em;
  border-right-width: 0.1em;
  border-right-style: solid;
}

/* Pitch coloring */
.heiban {
  color: var(--heiban);
}
.atamadaka {
  color: var(--atamadaka);
}
.nakadaka {
  color: var(--nakadaka);
}
.odaka {
  color: var(--odaka);
}
.kifuku {
  color: var(--kifuku);
}

/* Definition toggle css */
.left-edge,
.right-edge {
  position: absolute;
  top: 0;
  width: 50px;
  height: 100%;
  cursor: pointer;
  opacity: 0.4;
}
.left-edge {
  left: 0;
  border-radius: 8px 0px 0px 8px;
}
.right-edge {
  right: 0;
  border-radius: 0px 8px 8px 0px;
}
.left-edge:hover,
.right-edge:hover {
  background-color: var(--bg-inset);
  cursor: pointer;
}

/* Format Definitions */
#primary ul[data-sc-content="glossary"] > li:not(:first-child)::before {
  white-space: pre-wrap;
  content: " | ";
  display: inline;
}
#primary ul[data-sc-content="glossary"] > li {
  display: inline;
}
#primary ul[data-sc-content="glossary"] {
  display: inline;
  list-style: none;
  padding-left: 0;
}

/* Turn off italics */
.definition i {
  font-style: normal;
}

li[data-dictionary^="JMdict"] i {
  font-style: italic;
}

.definition a span {
  max-width: 300px !important;
}

/* backwards compatibility code for JPMN definitions */

li[data-details="JMdict (English)"] .dict-group__glossary > ul,
li[data-details="JMdict (English)"]
  .dict-group__glossary
  ul[data-sc-content="glossary"],
li[data-details="JMdict"] .dict-group__glossary > ul,
li[data-details="JMdict"] .dict-group__glossary ul[data-sc-content="glossary"],
li[data-details="JMdict Extra"] .dict-group__glossary > ul,
li[data-details="JMdict Extra"]
  .dict-group__glossary
  ul[data-sc-content="glossary"] {
  display: inline;
  padding-left: 0em;
}
/* ... */

